<resources>
    <string name="app_name">World Shop</string>
    <string name="login_explain">Login to start shopping all over the world</string>
    <string name="message_login_dialog">Please wait...</string>
    <string name="title_login_dialog">Log in</string>
    <string name="app_name_all_caps">WORLD SHOP</string>
    <string name="no_internet_warning">No internet connection available!!</string>
    <string name="title_activity_home">world shop</string>
    <string name="shop_menu_item">Shop</string>
    <string name="travel_menu_item">Travel</string>
    <string name="title_activity_shopping">shopping</string>
    <string name="enter_item_link">Enter item link</string>
    <string name="shopping_instruction">Your item detail</string>
    <string name="item_price">Item price</string>
    <string name="item_description">Item description</string>
    <string name="item_name">Item name</string>
    <string name="default_quantity_number">1</string>
    <string name="delivery_detail">Delivery detail</string>
    <string name="deliver_to">Deliver to</string>
    <string name="traveler_reward_amount">Traveler reward amount</string>
    <string name="explain_read_storage_permission">Read external storage is required to upload image</string>
    <string name="upload_picture_image_warning">You have to upload at least one item picture</string>
    <string name="empty_input_warning">This field is required!</string>
    <string name="invalid_item_url_warning">Please enter valid Url</string>
    <string name="title_activity_traveling">all products</string>
    <string name="setting_traveling_city">selected_city</string>
    <string name="menu_item_change_city">Change city</string>
    <string name="btn_make_offer"> Make Offer</string>
    <string name="item_price_format">$</string>
    <string name="item_reward_format">Reward: $</string>
    <string name="setting_logged_user">logged_user_setting</string>
    <string name="title_activity_select_travelling">select city</string>
    <string name="title_activity_make_offer">MakeOfferActivity</string>
    <string name="title_activity_request_detail">Request Detail</string>
    <string name="deliver_from">Deliver from</string>
    <string name="deliver_fee">Deliver fee</string>
    <string name="offer_note">Note</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="btn_message_me">message me</string>
    <string name="arrival_date">Arrival date</string>
    <string name="accepted">Accepted</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="sample_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries...</string>
    <string name="your_requests">Your Requests</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="request_status_pending">Pending</string>
    <string name="request_status_offer_acepted">Delivering</string>
    <string name="request_status_completed">Completed</string>
    <string name="request_status_unknown">Unknown</string>
    <string name="title_activity_user_view_all_request">UserViewAllRequestActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notification">Notification</string>
    <string name="pending_delivery_offers">Pending delivery offers</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="item_image_transition_name">itemImageDetail</string>
    <string name="profile_image">profileImage</string>
    <string name="profile_name">profileName</string>
</resources>
