<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_shop"
        android:orderInCategory="200"
        android:title="@string/shop_menu_item"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart_black_24px"/>
    <item
        android:id="@+id/action_travel"
        android:orderInCategory="300"
        android:title="@string/travel_menu_item"
        android:icon="@drawable/ic_flight_black_24px"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_conversation"
        android:orderInCategory="100"
        android:title="@string/friends"
        app:showAsAction="always"
        android:icon="@drawable/ic_person_black_48px"/>
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/notification"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications_black_48px"/>

</menu>