<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/content_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="thefour.com.worldshop.activities.ShoppingActivity"
            tools:showIn="@layout/activity_shopping">

            <TextView
                android:padding="@dimen/padding_separator"
                android:id="@+id/textViewInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/shopping_instruction" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextItemUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/enter_item_link"
                    android:inputType="textUri"
                    android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewItemImages"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_item_image_list_height"
                android:orientation="horizontal"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/item_name"
                    android:inputType="text"
                    android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/item_description"
                    android:inputType="text"
                    android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/item_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/item_price"
                    android:inputType="number"
                    android:text="@string/default_quantity_number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:padding="@dimen/padding_separator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delivery_detail"
                style="@style/Base.TextAppearance.AppCompat.Title" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextDeliverTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/deliver_to"
                    android:inputType="textAutoComplete"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextReward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/traveler_reward_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</layout>
