<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="request"
            type="thefour.com.worldshop.models.Request" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_make_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="thefour.com.worldshop.activities.MakeOfferActivity"
            tools:showIn="@layout/activity_make_offer">

            <ImageView
                android:id="@+id/item_imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size"
                tools:src="@drawable/example_image_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Price: $"/>
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="@dimen/item_image_padding"
                    android:text="@{String.valueOf(request.item.price * request.quantity)}"
                    tools:text="1000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quantity: "/>
                <TextView
                    tools:text="1"
                    android:text="@{String.valueOf(request.quantity)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputItemDeliverFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_vertical_margin"
                android:layout_marginTop="@dimen/view_vertical_margin">

                <AutoCompleteTextView
                    android:id="@+id/editTextDeliverFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/deliver_from"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textColorHint="@color/colorGray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_vertical_margin"
                android:layout_marginTop="@dimen/view_vertical_margin">

                <EditText
                    android:id="@+id/editTextFee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/deliver_fee"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColorHint="@color/colorGray" />
            </android.support.design.widget.TextInputLayout>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:layout_weight="1"
                android:datePickerMode="calendar"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_vertical_margin"
                android:layout_marginTop="@dimen/view_vertical_margin">

                <EditText
                    android:id="@+id/editTextNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/offer_note"
                    android:inputType="text"
                    android:maxLines="10"
                    android:textColorHint="@color/colorGray" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>


</layout>
